--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "quantaquirk/tinker",
-    "description": "Powerful REPL for the QuantaQuirk framework.",
-    "keywords": ["tinker", "repl", "psysh", "quantaquirk"],
+    "name": "quantaforge/tinker",
+    "description": "Powerful REPL for the QuantaForge framework.",
+    "keywords": ["tinker", "repl", "psysh", "quantaforge"],
     "license": "proprietary",
     "authors": [
         {
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": "^7.2.5|^8.0",
-        "quantaquirk/console": "^1.0.0",
-        "quantaquirk/contracts": "^1.0.0",
-        "quantaquirk/support": "^1.0.0",
+        "php": "^8.1",
+        "quantaforge/console": "^1.0.0",
+        "quantaforge/contracts": "^1.0.0",
+        "quantaforge/support": "^1.0.0",
         "psy/psysh": "^0.10.4|^0.11.1",
         "symfony/var-dumper": "^4.3.4|^5.0|^6.0"
     },
@@ -23,16 +23,16 @@
         "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "suggest": {
-        "quantaquirk/database": "The QuantaQuirk Database package (^1.0.0)."
+        "quantaforge/database": "The QuantaForge Database package (^1.0.0)."
     },
     "autoload": {
         "psr-4": {
-            "QuantaQuirk\\Tinker\\": "src/"
+            "QuantaForge\\Tinker\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "QuantaQuirk\\Tinker\\Tests\\": "tests/",
+            "QuantaForge\\Tinker\\Tests\\": "tests/",
             "App\\": "tests/fixtures/app",
             "One\\Two\\": "tests/fixtures/vendor/one/two"
         }
@@ -41,9 +41,9 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         },
-        "quantaquirk": {
+        "quantaforge": {
             "providers": [
-                "QuantaQuirk\\Tinker\\TinkerServiceProvider"
+                "QuantaForge\\Tinker\\TinkerServiceProvider"
             ]
         }
     },
